--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.9.7",
     "otp-generator": "^4.0.1",
-    "save": "^2.9.0"
+    "save": "^2.9.0",
+    "twilio": "^5.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
