Removed secret from previous commit

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 TOKEN_SECRET="12345"
+accountSid = 'ACa47aabfd14049b34b5159006ed560bb5'
+authToken = '32df8b9d8910ee25ac78f5cc4a5f6256'
+key = "secret"
